# Gorilla

./: .gitignore  404.html  Cargo.toml  LICENSE  Makefile  README.md  allposts.html  byexample.md  cover.bat  coverage  distribute.ps1  feed.xml  go.mod  go.sum  index.html  index.md  main.go  package.json  redirects.json  robots.txt  run_gorilla.ps1  search.json  sitemap.xml  withenv.ps1
.github/: ci.yml  go.yml
_examples/: complex_hello.gr  complex_hello.grx  fib.gr  fib.grx  fib_rec.gr  fib_rec.grx  fizzbuzz.gr  fizzbuzz.grx  hello.gr  hello.grx  recursion.gr  recursion.grx
about/: index.html
api/: functions.md  index.md  main.go  special.md
ast/: ast.go
code/: code.go
compiler/: BytecodeCompiler.go  FromString.go  compiler.go  compiler_test.go  grammar.js
config/: config.go
docs/: Gemfile  README.md  _config.yml  index.html  start.md  tut.md
errors/: report.go  report_test.go
examples/: HelloHTTP.gor  bc1.gobc  bf.gor  conditioning.grl  easy.gor  fib.gor  fibonacci.grl  fibonacci.grlx  fizzbuzz.gor  functions.grl  greeting.gor  guess.gor  vectors.grl
exports/: exports.go  exports_test.go  run.go
gorilla/: main.go
grammar/: grammar.go
helper/: helper.go  run.go
lexer/: lexer.go
object/: FromString.go  builtins.go  collection.go  env.go  global.go  message.go  numeric.go  object.go  range.go  string.go
parser/: lexer.go  lexer_test.go  parser.go  parser_test.go
repl/: repl.go
runtime/: any.go  any_test.go  bool.go  bool_test.go  class.go  class_test.go  env.go  env_test.go  globals.go  globals_test.go  go_func.go  go_func_test.go  (+17 more)
(+118 files in other folders)
