[package]
name = "gorilla-rs"
version = "0.1.0"
authors = ["SnowballSH <derek070211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leb128 = "0.2.4"
strum = "0.20"
strum_macros = "0.20"
dyn-clone = "1.0.4"
inner = "0.1.1"
pest_derive = "2.1.0"
pest = "2.1.3"
lazy_static = "1.4.0"
console = "0.14.1"
unicode-segmentation = "1.7.1"
